--- a/frontend/src/components/CategoryList/CategoryList.module.css
+++ b/frontend/src/components/CategoryList/CategoryList.module.css
@@ -75,6 +75,7 @@
   align-items: center;
   display: flex;
   border-radius: 20px;
+  text-transform: uppercase;
 }
 
 @media screen and (min-width: 768px) {
