--- a/frontend/src/components/RecipeList/RecipeList.module.css
+++ b/frontend/src/components/RecipeList/RecipeList.module.css
@@ -8,7 +8,7 @@
 @media screen and (min-width: 768px) {
   .wrapper {
     display: flex;
-    direction: row;
+    flex-direction: row;
     flex-wrap: wrap;
     gap: 20px;
   }
