--- a/frontend/src/components/sections/Categories/Categories.module.css
+++ b/frontend/src/components/sections/Categories/Categories.module.css
@@ -14,3 +14,21 @@
     /* padding: 120px 80px; */
   }
 }
+
+.backButton {
+  padding: 10px 20px;
+  margin-bottom: 20px;
+  background-color: var(--black);
+  color: var(--white);
+  border: none;
+  border-radius: 30px;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.backButton:hover {
+  background-color: var(--dark-gray);
+}
