--- a/frontend/src/components/UserInfo/UserInfo.module.css
+++ b/frontend/src/components/UserInfo/UserInfo.module.css
@@ -35,12 +35,41 @@
 
 .userStatItem {
   margin: 4px 0;
+  letter-spacing: -0.02em;
+}
+
+.statLabel {
+  font-size: 12px;
+  color: var(--gray);
+  font-weight: 500;
+  margin-right: 8px;
+}
+
+.statValue {
+  font-weight: 700;
+  color: var(--gray);
   font-size: 14px;
+  line-height: 1.43;
 }
 
 @media (min-width: 768px) {
   .userInfo {
     width: 394px;
     gap: 20px;
+  }
+
+  .statLabel {
+    font-size: 14px;
+    color: var(--gray);
+    font-weight: 500;
+    margin-right: 8px;
+  }
+  
+  .statValue {
+    font-weight: 700;
+    font-size: 16px;
+    color: var(--gray);
+    font-size: 14px;
+    line-height: 1.43;
   }
 }
