--- a/frontend/src/components/ui/UserAvatar/UserAvatar.module.css
+++ b/frontend/src/components/ui/UserAvatar/UserAvatar.module.css
@@ -43,6 +43,38 @@
   height: 50%;
 }
 
+.avatarOuterWrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.avatarWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  overflow: hidden; /* keep this */
+  position: relative;
+}
+
+.avatarInputWrapper {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  background-color: black;
+  color: white;
+  font-size: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  z-index: 1;
+}
+
 .avatarInput {
   display: none;
 }
