--- a/frontend/src/pages/Profile/Profile.module.css
+++ b/frontend/src/pages/Profile/Profile.module.css
@@ -3,6 +3,23 @@
   flex-direction: column;
 }
 
+.userCardWrapper {
+  width: 100%;
+  max-width: 394px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 40px;
+}
+
+button {
+  width: 100%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media screen and (min-width: 1440px) {
   .wrapper {
     display: flex;
