--- a/frontend/src/components/SignInForm/SignInForm.module.css
+++ b/frontend/src/components/SignInForm/SignInForm.module.css
@@ -7,13 +7,13 @@
 }
 
 .input {
-  color: var(--gray);
+  color: #1a1a1a;
   font-family: Mulish;
-  font-size: 14px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 500;
-  line-height: 20px;
-  letter-spacing: -0.28px;
+  line-height: 24px; /* 150% */
+  letter-spacing: -0.32px;
 
   display: flex;
   padding: 14px 145px 14px 14px;
