--- a/frontend/src/components/RecipeList/RecipeList.module.css
+++ b/frontend/src/components/RecipeList/RecipeList.module.css
@@ -1,8 +1,16 @@
+@media screen and (min-width: 1440px) {
+  .wrap {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
   gap: 32px;
   width: 100%;
+  margin-top: 32px;
 }
 
 @media screen and (min-width: 768px) {
@@ -11,5 +19,13 @@
     flex-direction: row;
     flex-wrap: wrap;
     gap: 20px;
+    margin-top: 40px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .wrapper {
+    width: 910px;
+    margin-top: 0;
   }
 }
