--- a/frontend/src/components/CategoryList/CategoryList.module.css
+++ b/frontend/src/components/CategoryList/CategoryList.module.css
@@ -1,14 +1,22 @@
+.categoriesWrapper {
+  padding: 0;
+  width: 343px;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
 .categoryListContainer {
-  max-width: 343px;
   margin: 0 auto;
+  justify-items: center;
+  width: 100%;
 }
 
 .grid {
   display: grid;
   grid-template-columns: 1fr;
   gap: 16px;
-  margin-top: 40px;
-  justify-content: center;
+
+  width: 100%;
 }
 
 .card {
@@ -18,7 +26,9 @@
   cursor: pointer;
   transition: transform 0.3s;
   display: flex;
-  aspect-ratio: 343 / 250;
+  flex-direction: column;
+
+  aspect-ratio: 340 / 300;
 }
 
 .card:hover {
@@ -26,10 +36,13 @@
 }
 
 .image {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  aspect-ratio: 1 / 1;
+  height: 100%;
   object-fit: cover;
-  display: block;
+  object-position: center;
 }
 
 .buttonWrap {
@@ -49,7 +62,6 @@
   font-size: 14px;
   font-weight: 500;
   color: var(--black);
-  cursor: pointer;
   transition: background 0.3s;
 }
 
@@ -58,265 +70,157 @@
 }
 
 .icon {
-  flex-shrink: 0;
-  stroke: var(--white);
-  fill: none;
   width: 24px;
   height: 24px;
+  stroke: var(--white);
+  fill: none;
 }
 
 .allCategories {
   background-color: var(--black);
   color: var(--white);
-  font-size: 18px;
-  font-weight: 600;
-  text-align: center;
+  display: flex;
   justify-content: center;
   align-items: center;
-  display: flex;
-  border-radius: 20px;
   text-transform: uppercase;
+  font-weight: 600;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1439px) {
+  .categoriesWrapper {
+    padding: 0;
+    width: 704px;
+  }
+  .card {
+    aspect-ratio: auto;
+  }
   .categoryListContainer {
-    max-width: 704px;
+    min-width: 343px;
+    margin: 0 auto;
   }
   .grid {
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
+    margin-top: 40px;
+    width: 100%;
+  }
+  .card {
+    height: 320px;
   }
   .grid > .card:nth-child(3),
   .grid > .card:nth-child(8) {
     grid-column: span 2;
-    aspect-ratio: 2 / 1;
+    height: 320px;
   }
-
   .buttonWrap {
     bottom: 24px;
     left: 24px;
     gap: 4px;
   }
   .allCategories {
-    font-size: 20px;
+    height: 320px;
     border-radius: 30px;
+    font-size: 20px;
   }
 }
 
-/* @media screen and (min-width: 1440px) {
+@media screen and (min-width: 1440px) {
+  .categoriesWrapper {
+    padding: 0;
+    width: 1280px;
+  }
   .categoryListContainer {
     max-width: 1280px;
     margin: 0 auto;
+    /* width: 100%; */
   }
-
-  .card {
-    width: 100%;
-    height: 100%;
-    aspect-ratio: auto;
-    overflow: hidden;
-  }
-
-  .image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block;
-  }
-
-  .grid {
-    display: grid;
-    grid-template-columns: 325px 325px 590px;
-    grid-template-rows: repeat(4, 369px);
+  .row {
+    display: flex;
+    align-items: flex-start;
     gap: 20px;
-    grid-template-areas:
-      'a b c'
-      'd e f'
-      'g h i'
-      'j k l';
+    margin-bottom: 20px;
+    width: 100%;
   }
-  .grid > .card:nth-child(1) {
-    grid-area: a;
-    width: 325px;
+  .card {
+    border-radius: 20px;
+    overflow: hidden;
+    height: 340px;
   }
-
-  .grid > .card:nth-child(2) {
-    grid-area: b;
-    width: 325px;
-  }
-
-  .grid > .card:nth-child(3) {
-    grid-area: c;
-    width: 590px;
-  }
-
-  .grid > .card:nth-child(4) {
-    grid-area: d;
-    width: 590px;
-  }
-
-  .grid > .card:nth-child(5) {
-    grid-area: e;
-    width: 325px;
-  }
-
-  .grid > .card:nth-child(6) {
-    grid-area: f;
-    width: 325px;
-  }
-
-  .grid > .card:nth-child(7) {
-    grid-area: g;
-    width: 325px;
-  }
-
-  .grid > .card:nth-child(8) {
-    grid-area: h;
-    width: 590px;
-  }
-
-  .grid > .card:nth-child(9) {
-    grid-area: i;
-    width: 325px;
-  }
-
-  .grid > .card:nth-child(10) {
-    grid-area: j;
-    width: 590px;
-  }
-
-  .buttonWrap {
-    bottom: 24px;
-    left: 24px;
-    gap: 4px;
-  }
-
   .allCategories {
+    height: 340px;
     font-size: 20px;
     border-radius: 30px;
-    width: 325px;
-    height: 369px;
   }
-} */
-
-@media screen and (min-width: 1440px) {
-  .categoryListContainer {
-    width: 1280px;
-    margin: 0 auto;
+  .card-row0-item0,
+  .card-row0-item1 {
+    flex: 1 1 25%;
   }
-
-  .grid {
-    display: grid;
-    grid-template-columns: 325px 325px 590px;
-    grid-template-rows: repeat(4, 369px);
-    gap: 20px;
+  .card-row0-item2 {
+    flex: 2 1 50%;
   }
-
-  .card {
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
+  .card-row1-item0 {
+    flex: 2 1 50%;
   }
-
-  .image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block;
+  .card-row1-item1,
+  .card-row1-item2 {
+    flex: 1 1 25%;
   }
-
-  /* Маленькі картки */
-  .grid > .card:nth-child(1),
-  .grid > .card:nth-child(2),
-  .grid > .card:nth-child(5),
-  .grid > .card:nth-child(6),
-  .grid > .card:nth-child(7),
-  .grid > .card:nth-child(9),
-  .grid > .card:nth-child(11),
-  .grid > .card:nth-child(12) {
-    width: 325px;
-    height: 369px;
+  .card-row2-item0,
+  .card-row2-item2 {
+    flex: 1 1 25%;
   }
-
-  /* Великі картки */
-  .grid > .card:nth-child(3),
-  .grid > .card:nth-child(4),
-  .grid > .card:nth-child(8),
-  .grid > .card:nth-child(10) {
-    width: 590px;
-    height: 369px;
+  .card-row2-item1 {
+    flex: 2 1 50%;
   }
-
-  /* Розміщення по сітці */
-  .grid > .card:nth-child(1) {
-    grid-column: 1;
-    grid-row: 1;
+  .card-row3-item0 {
+    flex: 2 1 50%;
   }
-
-  .grid > .card:nth-child(2) {
-    grid-column: 2;
-    grid-row: 1;
+  .card-row3-item1,
+  .card-row3-item2 {
+    flex: 1 1 25%;
   }
-
-  .grid > .card:nth-child(3) {
-    grid-column: 3;
-    grid-row: 1;
-  }
-
-  .grid > .card:nth-child(4) {
-    grid-column: 1;
-    grid-row: 2;
-  }
-
-  .grid > .card:nth-child(5) {
-    grid-column: 2;
-    grid-row: 2;
-  }
-
-  .grid > .card:nth-child(6) {
-    grid-column: 3;
-    grid-row: 2;
-  }
-
-  .grid > .card:nth-child(7) {
-    grid-column: 1;
-    grid-row: 3;
-  }
-
-  .grid > .card:nth-child(8) {
-    grid-column: 2;
-    grid-row: 3;
-  }
-
-  .grid > .card:nth-child(9) {
-    grid-column: 3;
-    grid-row: 3;
-  }
-
-  .grid > .card:nth-child(10) {
-    grid-column: 1;
-    grid-row: 4;
-  }
-
-  .grid > .card:nth-child(11) {
-    grid-column: 2;
-    grid-row: 4;
-  }
-
-  .grid > .card:nth-child(12) {
-    grid-column: 3;
-    grid-row: 4;
-  }
-
-  .buttonWrap {
-    bottom: 24px;
-    left: 24px;
-    gap: 4px;
-  }
-
-  .allCategories {
-    font-size: 20px;
-    border-radius: 30px;
-    width: 325px;
-    height: 369px;
-  }
+}
+.row {
+  display: flex;
+  align-items: flex-start;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+.card {
+  border-radius: 20px;
+  overflow: hidden;
+  height: 300px;
+}
+.allCategories {
+  height: 300px;
+  font-size: 20px;
+  border-radius: 30px;
+}
+.card-row0-item0,
+.card-row0-item1 {
+  flex: 1 1 25%;
+}
+.card-row0-item2 {
+  flex: 2 1 50%;
+}
+.card-row1-item0 {
+  flex: 2 1 50%;
+}
+.card-row1-item1,
+.card-row1-item2 {
+  flex: 1 1 25%;
+}
+.card-row2-item0,
+.card-row2-item2 {
+  flex: 1 1 25%;
+}
+.card-row2-item1 {
+  flex: 2 1 50%;
+}
+.card-row3-item0 {
+  flex: 2 1 50%;
+}
+.card-row3-item1,
+.card-row3-item2 {
+  flex: 1 1 25%;
 }
